--- a/data/friendlinks.yml
+++ b/data/friendlinks.yml
@@ -1,6 +1,6 @@
-- title: BioIT爱好者
-  url: https://bioitee.com/
-  description: Bio & IT 网址导航
+- title: Vercel爱好者
+  url: https://map.cubetec.cc/
+  description: 网址导航
 - title: 个人博客
-  url: https://shen.bioitee.com/
+  url: https://cubetec.cc/
   description: 个人博客
