--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -5,9 +5,9 @@
   links: 
     - title: 关注我们
       logo: ""
-      url: https://bioitee.com
+      url: https://cubetec.cc
       qrcode: assets/images/logos/qrcode.jpg
-      description: BioIT 爱好者！
+      description: Vercel 爱好者！
     - title: 语雀
       logo: 语雀.jpg
       url: https://www.yuque.com/
