--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseURL               = "https://map.cubetec.asia/"
 languageCode          = "zh-CN"
 title                 = "AI科技圈"
-theme                 = "aitec"
+theme                 = "WebStack-Hugo"
 preserveTaxonomyNames = true
 disablePathToLower    = true
 hasCJKLanguage        = true
@@ -10,7 +10,7 @@ publishDir            = "public"					# 站点静态文件保存目录
 
 [params]
     author        = "cubeyu"
-    description   = "aitec 网址导航 | 主题 BY AI科技圈"
+    description   = "AI科技圈"
     upload        = "https://www.yuque.com/forms/share/1a1fee15-f7a9-4ee6-9dd4-b0ba9fef1871"  # 左侧导航栏的"网站提交"
     about         = "https://www.cubetec.asia"	# 左侧导航栏的"关于导航"页面(./about)
     repository    = "https://github.com/cubeyu/map-demo-hugo"  
