--- a/data/friendlinks.yml
+++ b/data/friendlinks.yml
@@ -1,6 +1,6 @@
-- title: Vercel爱好者
-  url: https://map.cubetec.cc/
+- title: 本站
+  url: https://map.cubetec.asia/
   description: 网址导航
-- title: 个人博客
-  url: https://cubetec.cc/
+- title: AI科技圈
+  url: https://www.cubetec.asia/
   description: 个人博客
