--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -5,7 +5,7 @@
   links: 
     - title: 关注我们
       logo: ""
-      url: https://cubetec.cc
+      url: https://www.cubetec.asia
       qrcode: assets/images/logos/qrcode.jpg
       description: Vercel 爱好者！
     - title: 语雀
