--- a/data/headers.yml
+++ b/data/headers.yml
@@ -4,7 +4,7 @@
 
 - item: 作者
   icon: fa fa-book
-  link: https://www.yuque.com/cubeyu
+  link: https://www.cubetec.asia/
 
 - item: 配置
   icon: fa fa-cog
